--- a/index.html
+++ b/index.html
@@ -4,7 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../weaather_logo/icons8-four-seasons-100.png"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js"></script>
     <title>Weather</title>
   </head>
-  <body></body>
+  <body>
+    <div id="main_container">
+      <div class="navbar_conatainer">
+        <div class="logo_container">
+          <img src="../weaather_logo/icons8-four-seasons-100.png" alt="logo" />
+          <span>weather</span>
+        </div>
+        <div class="menu_bar">
+          <ul>
+            <li>Home</li>
+            <li>Contact</li>
+            <li>Help</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
