created basic weather html structure

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
           </ul>
         </div>
       </div>
+      <div class="weatherdata_container">
+        <h1>Hello <span id="weather_city">Mumbai</span>&#128075;</h1>
+        <h3 class="weather_main">Clear</h3>
+        <h3 class="weather_description">Clear Sky</h3>
+        <img
+          src="https://openweathermap.org/img/wn/01d@2x.png"
+          alt="weather_icon"
+          class="weather_icon"
+        />
+        <div class="temperature_box">
+          <span id="temperature">31.99</span><sup>o</sup>C
+        </div>
+      </div>
     </div>
   </body>
 </html>
