--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       type="image/x-icon"
       href="../weaather_logo/icons8-four-seasons-100.png"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
+      integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js"></script>
     <title>Weather</title>
@@ -20,25 +26,32 @@
           <img src="../weaather_logo/icons8-four-seasons-100.png" alt="logo" />
           <span>weather</span>
         </div>
-        <div class="menu_bar">
-          <ul>
-            <li>Home</li>
-            <li>Contact</li>
-            <li>Help</li>
-          </ul>
-        </div>
       </div>
       <div class="weatherdata_container">
-        <h1>Hello <span id="weather_city">Mumbai</span>&#128075;</h1>
-        <h3 class="weather_main">Clear</h3>
-        <h3 class="weather_description">Clear Sky</h3>
+        <h1>Hello <span id="weather_city">Pune</span>&#128075;</h1>
+        <h3>It's <span id="weather_decription">Clear</span></h3>
         <img
           src="https://openweathermap.org/img/wn/01d@2x.png"
           alt="weather_icon"
-          class="weather_icon"
+          id="weather_icon"
         />
         <div class="temperature_box">
           <span id="temperature">31.99</span><sup>o</sup>C
+        </div>
+        <div class="overlap">
+          <h3>AQI Index</h3>
+          <img
+            src="../weaather_logo/earth-transformed.png"
+            alt="earth"
+            class="earth"
+          />
+          <img
+            src="../weaather_logo/img3.png"
+            alt="gauge_meter"
+            class="gauge_meter"
+          />
+          <span class="meter_indicator"></span>
+          <span class="meter_center_circle"></span>
         </div>
       </div>
     </div>
