modified img url

--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="../weaather_logo/icons8-four-seasons-100.png"
+      href="https://res.cloudinary.com/do63p55lo/image/upload/v1684680429/weather/logo_m8u7yy.png"
     />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
-      integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js"></script>
     <title>Weather</title>
@@ -23,7 +17,10 @@
     <div id="main_container">
       <div class="navbar_conatainer">
         <div class="logo_container">
-          <img src="../weaather_logo/icons8-four-seasons-100.png" alt="logo" />
+          <img
+            src="https://res.cloudinary.com/do63p55lo/image/upload/v1684680429/weather/logo_m8u7yy.png"
+            alt="logo"
+          />
           <span>weather</span>
         </div>
       </div>
@@ -41,12 +38,12 @@
         <div class="overlap">
           <h3>AQI Index</h3>
           <img
-            src="../weaather_logo/earth-transformed.png"
+            src="https://res.cloudinary.com/do63p55lo/image/upload/v1684680482/weather/earth_mhwc5g.png"
             alt="earth"
             class="earth"
           />
           <img
-            src="../weaather_logo/img3.png"
+            src="https://res.cloudinary.com/do63p55lo/image/upload/v1684680430/weather/meter_fccf6p.png"
             alt="gauge_meter"
             class="gauge_meter"
           />
