--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
           <span class="meter_center_circle"></span>
         </div>
       </div>
+      <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </div>
   </body>
 </html>
